# dedup

./: LICENSE  PRD.md  README.md  local.properties
DeDup/: .gitignore  FIXES.md  build.gradle.kts  gradle.properties  settings.gradle.kts
DeDup/app/: build.gradle.kts  google-services.json  proguard-rules.pro
DeDup/app/src/main/: AndroidManifest.xml
DeDup/app/src/main/assets/: privacy_policy.html
DeDup/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
DeDup/app/src/main/res/drawable/: ic_app_icon.xml  ic_dedup_logo.xml  ic_google.xml
DeDup/app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
DeDup/app/src/main/res/values-hi/: strings.xml
DeDup/app/src/main/res/values-night/: colors.xml
DeDup/feature/voice-storage/: build.gradle.kts
DeDup/gradle/: libs.versions.toml
DeDup/gradle/wrapper/: gradle-wrapper.properties
dedup-automation-test/: README.md  SCREEN_TEST_CASES.md  config.py  conftest.py  requirements.txt
dedup-automation-test/pages/: base_page.py  big_file_map_page.py  contacts_page.py  dashboard_page.py  deduplication_page.py  deep_optimization_page.py  empty_folder_page.py  file_browser_page.py  history_and_logs_page.py  login_page.py  scanner_page.py  settings_page.py  smart_junk_page.py  splash_page.py  voice_storage_page.py  whatsapp_cleaner_page.py
dedup-automation-test/tests/: test_contacts.py  test_dashboard.py  test_deduplication.py  test_deep_optimization.py  test_file_management.py  test_history_and_logs.py  test_login.py  test_settings.py  test_smart_junk.py  test_splash.py  test_voice_storage.py  test_whatsapp_cleaner.py
(+353 files in other folders)
